created conection sql

--- a/code/areaperroscode.ipynb
+++ b/code/areaperroscode.ipynb
@@ -291,7 +291,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([\"Àrea d'Esbarjo per a Gossos  *Plaça Wagner\",\n       \"Àrea d'Esbarjo per a Gossos  *Plaça de Martí Llauradó\",\n       \"Àrea d'Esbarjo per a Gossos  *Hondures - Sagrera - Josep Estivill\",\n       \"Àrea d'Esbarjo per a Gossos\",\n       \"Àrea d'Esbarjo per a Gossos  *Travessera de Gràcia\",\n       \"Àrea d'Esbarjo per a Gossos  *Plaça Julio González\",\n       \"Àrea d'Esbarjo per a Gossos *avinguda Coll de Portell\",\n       \"Àrea d'Esbarjo per a Gossoss  *Plaça Olivereta\",\n       \"Àrea d'Esbarjo per a Gossos  * carrer Cinca\",\n       \"Àrea d'Esbarjo per a Gossos  *Carrer Esteve Terrades\",\n       \"Àrea d'Esbarjo per a Gossos *Escultor Claperòs - Aragó\",\n       \"Àrea d'Esbarjo per a Gossos * Passatge Xinxó\",\n       \"Àrea d'Esbarjo per a Gossos Conca - Sant Antoni Maria Claret - Indústria\",\n       \"Àrea d'Esbarjo per a Gossos  *Santander - Pg. Enric Sanchis\",\n       \"Àrea d'Esbarjo per a Gossos  *Plaça Congrés Eucarístic\",\n       \"Àrea d'Esbarjo per a Gossos  *Jardins Manuel J. Arnalot\",\n       \"Àrea d'Esbarjo per a Gossos  *Jardins de Martí Luter - Passatge Maluquer\",\n       \"Àrea d'Esbarjo per a Gossos *avinguda Meridiana - Via Favència  - Cooperació\",\n       \"Àrea d'Esbarjo per a Gossos *Aragó - Bilbao - Lope de Vega\",\n       \"Àrea d'Esbarjo per a Gossos *Plaça Heroïnes de Girona\",\n       \"Àrea d'Esbarjo per a Gossos  *Plaça Sagrada Família\",\n       \"Àrea d'Esbarjo per a Gossos  *Plaça Doctor Letamendi\",\n       \"Àrea  d'Esbarjo per a Gossos  *Bosch i Gimpera\",\n       \"Àrea d'Esbarjo per a Gossos *Park Güell Forestal\",\n       \"Àrea d'Esbarjo per a Gossos *Juan de Mena-Vall Hebrón\",\n       \"Àrea d'Esbarjo  per a Gossos *Pg Maragall -Trinxant - Juan de Garay\",\n       \"Àrea d'Esbarjo per a Gossos Torrent del Remei *Park Güell Forestal\",\n       \"Àrea d'Esbarjo per a Gossos *Ferran Junoy - Tucuman\",\n       \"Àrea d'Esbarjo per a Gossos * Av. Meridiana\",\n       \"Àrea d'Esbarjo per a Gossos *Nàpols\",\n       \"Àrea d'Esbarjo per a Gossos *Plaça Ventura i Gassol\",\n       \"Àrea d'Esbarjo per a Gossos  *Carrer Farigola\",\n       \"Àrea d'Esbarjo per a Gossos *Plaça Palmeres\",\n       \"Àrea d'Esbarjo per a Gossos *avinguda Diagonal - Consell de Cent - Padilla\",\n       \"Àrea d'Esbarjo per a Gossos *Avinguda Mistral  - Vilamarí - Av Paral·lel\",\n       \"Àrea d'Esbarjo per a Gossos *Priorat\",\n       \"Àrea d'Esbarjo per a Gossos  *Via Trajana - Santander - Verneda, Pg. - Binefar\",\n       \"Àrea d'Esbarjo per a Gossos *Plaça Rosa Sabater\",\n       \"Àrea d'Esbarjo per a Gossos  *Jardins Can Marcet\",\n       \"Àrea d'Esbarjo per a Gossos  *Capsec\",\n       \"Àrea d'Esbarjo per a Gossos *Plaça Alfons Comín\",\n       \"Àrea d'Esbarjo per a Gossos *Torrent Parera - N152\",\n       \"Àrea d'Esbarjo per a Gossos *Parc Nova Icària\",\n       \"Àrea d'Esbarjo per a Gossos *Pare Pérez Pulgar\",\n       \"Àrea d'Esbarjo per a Gossos *Coll i Alentorn\"], dtype=object)"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_areaperros[\"NAME_AREA\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +337,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 111 entries, 0 to 110\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   NAME_AREA      111 non-null    object \n",
+      " 1   ROAD           111 non-null    object \n",
+      " 2   CODE_DISTRICT  111 non-null    int64  \n",
+      " 3   DISTRICT       111 non-null    object \n",
+      " 4   LATITUDE       111 non-null    float64\n",
+      " 5   LONGITUDE      111 non-null    float64\n",
+      "dtypes: float64(2), int64(1), object(3)\n",
+      "memory usage: 5.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_areaperros.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
