--- a/conection/csvtosql.ipynb
+++ b/conection/csvtosql.ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1,)\n",
-      "(2,)\n",
-      "(3,)\n",
-      "(4,)\n",
-      "(5,)\n",
-      "(6,)\n",
-      "(7,)\n",
-      "(8,)\n",
-      "(9,)\n",
-      "(10,)\n"
-     ]
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DISTRICT_CODE</th>\n      <th>DISTRICT</th>\n      <th>ANIMALS</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "Empty DataFrame\nColumns: [DISTRICT_CODE, DISTRICT, ANIMALS]\nIndex: []"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,20 +39,12 @@
     "    return bcn_project\n",
     "\n",
     "\n",
-    "def create_table():\n",
-    "      return connection().execute(\"\")\n",
+    "df = pd.DataFrame({'DISTRICT_CODE': [], 'DISTRICT':[], 'ANIMALS':[]})\n",
+    "df\n",
     "\n",
-    "def return_animals():\n",
-    "    return connection().execute(\"SELECT * FROM animals;\")\n",
     "\n",
-    "def animals_numbers():\n",
-    "     return connection().execute(\"SELECT code_district FROM animals;\")\n",
     "\n",
-    "all_animals = return_animals()\n",
-    "animals_numbers = animals_numbers()\n",
-    "\n",
-    "for _ in range(10):\n",
-    "    print(next(animals_numbers))"
+    "\n"
    ]
   }
  ],
@@ -80,7 +65,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "orig_nbformat": 3
+  "orig_nbformat": 2
  },
  "nbformat": 4,
  "nbformat_minor": 2
