--- a/code/populationcode.ipynb
+++ b/code/populationcode.ipynb
@@ -229,6 +229,32 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   CODE_DISTRICT  10 non-null     int64 \n",
+      " 1   DISTRICT       10 non-null     object\n",
+      " 2   POPULATION     10 non-null     int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 368.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_population.info() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_population.to_csv(\"../data/population_cleaned.csv\", index=False)"
