--- a/code/rentacode.ipynb
+++ b/code/rentacode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Codi_Districte</th>\n      <th>Nom_Districte</th>\n      <th>Import_€_Any</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>12351</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>14598</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>16271</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>17803</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>21890</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>24081</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>12981</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>19975</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>18447</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>16710</td>\n    </tr>\n  </tbody>\n</table>\n<p>73 rows × 3 columns</p>\n</div>",
       "text/plain": "    Codi_Districte Nom_Districte  Import_€_Any\n0                1  Ciutat Vella         12351\n1                1  Ciutat Vella         14598\n2                1  Ciutat Vella         16271\n3                1  Ciutat Vella         17803\n4                2      Eixample         21890\n..             ...           ...           ...\n68              10    Sant Martí         24081\n69              10    Sant Martí         12981\n70              10    Sant Martí         19975\n71              10    Sant Martí         18447\n72              10    Sant Martí         16710\n\n[73 rows x 3 columns]"
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,47 +123,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>IMPORT_€_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>12351</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>14598</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>16271</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>17803</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>21890</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>24081</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>12981</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>19975</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>18447</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>16710</td>\n    </tr>\n  </tbody>\n</table>\n<p>73 rows × 3 columns</p>\n</div>",
-      "text/plain": "    CODE_DISTRICT      DISTRICT  IMPORT_€_ANUAL\n0               1  Ciutat Vella           12351\n1               1  Ciutat Vella           14598\n2               1  Ciutat Vella           16271\n3               1  Ciutat Vella           17803\n4               2      Eixample           21890\n..            ...           ...             ...\n68             10    Sant Martí           24081\n69             10    Sant Martí           12981\n70             10    Sant Martí           19975\n71             10    Sant Martí           18447\n72             10    Sant Martí           16710\n\n[73 rows x 3 columns]"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>IMPORT_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>12351</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>14598</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>16271</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>17803</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>21890</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>24081</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>12981</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>19975</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>18447</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>16710</td>\n    </tr>\n  </tbody>\n</table>\n<p>73 rows × 3 columns</p>\n</div>",
+      "text/plain": "    CODE_DISTRICT      DISTRICT  IMPORT_ANUAL\n0               1  Ciutat Vella         12351\n1               1  Ciutat Vella         14598\n2               1  Ciutat Vella         16271\n3               1  Ciutat Vella         17803\n4               2      Eixample         21890\n..            ...           ...           ...\n68             10    Sant Martí         24081\n69             10    Sant Martí         12981\n70             10    Sant Martí         19975\n71             10    Sant Martí         18447\n72             10    Sant Martí         16710\n\n[73 rows x 3 columns]"
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_renta = df_renta.rename(columns={\"Codi_Districte\":\"CODE_DISTRICT\", \"Nom_Districte\":\"DISTRICT\", \"District.Name\":\"DISTRICT\", \"Import_€_Any\":\"IMPORT_€_ANUAL\"})\n",
+    "df_renta = df_renta.rename(columns={\"Codi_Districte\":\"CODE_DISTRICT\", \"Nom_Districte\":\"DISTRICT\", \"District.Name\":\"DISTRICT\", \"Import_€_Any\":\"IMPORT_ANUAL\"})\n",
     "df_renta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>IMPORT_€_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>15256.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>24140.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>18274.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Les Corts</td>\n      <td>29353.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>32156.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>Gràcia</td>\n      <td>23072.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>19697.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>Nou Barris</td>\n      <td>14891.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>17337.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>20610.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "   CODE_DISTRICT             DISTRICT  IMPORT_€_ANUAL\n0              1         Ciutat Vella         15256.0\n1              2             Eixample         24140.0\n2              3       Sants-Montjuïc         18274.0\n3              4            Les Corts         29353.0\n4              5  Sarrià-Sant Gervasi         32156.0\n5              6               Gràcia         23072.0\n6              7       Horta-Guinardó         19697.0\n7              8           Nou Barris         14891.0\n8              9          Sant Andreu         17337.0\n9             10           Sant Martí         20610.0"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>IMPORT_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>15256.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>24140.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>18274.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Les Corts</td>\n      <td>29353.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>32156.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>Gràcia</td>\n      <td>23072.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>19697.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>Nou Barris</td>\n      <td>14891.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>17337.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>20610.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "   CODE_DISTRICT             DISTRICT  IMPORT_ANUAL\n0              1         Ciutat Vella       15256.0\n1              2             Eixample       24140.0\n2              3       Sants-Montjuïc       18274.0\n3              4            Les Corts       29353.0\n4              5  Sarrià-Sant Gervasi       32156.0\n5              6               Gràcia       23072.0\n6              7       Horta-Guinardó       19697.0\n7              8           Nou Barris       14891.0\n8              9          Sant Andreu       17337.0\n9             10           Sant Martí       20610.0"
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_renta = df_renta.groupby(['CODE_DISTRICT', 'DISTRICT'])['IMPORT_€_ANUAL'].apply(lambda x: x.mean()).round().reset_index()\n",
+    "df_renta = df_renta.groupby(['CODE_DISTRICT', 'DISTRICT'])['IMPORT_ANUAL'].apply(lambda x: x.mean()).round().reset_index()\n",
     "df_renta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -173,11 +173,11 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10 entries, 0 to 9\n",
       "Data columns (total 3 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   CODE_DISTRICT   10 non-null     int64  \n",
-      " 1   DISTRICT        10 non-null     object \n",
-      " 2   IMPORT_€_ANUAL  10 non-null     float64\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   CODE_DISTRICT  10 non-null     int64  \n",
+      " 1   DISTRICT       10 non-null     object \n",
+      " 2   IMPORT_ANUAL   10 non-null     float64\n",
       "dtypes: float64(1), int64(1), object(1)\n",
       "memory usage: 368.0+ bytes\n"
      ]
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
