first graphic in streamlit

--- a/code/populationcode.ipynb
+++ b/code/populationcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "Year                 0\nDistrict.Code        0\nDistrict.Name        0\nNeighborhood.Code    0\nNeighborhood.Name    0\nGender               0\nAge                  0\nNumber               0\ndtype: int64"
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>District.Code</th>\n      <th>District.Name</th>\n      <th>Age</th>\n      <th>Number</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>224</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>50</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>43</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>95</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2017</td>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>0-4</td>\n      <td>124</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>70075</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>21</td>\n    </tr>\n    <tr>\n      <th>70076</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>70077</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>31</td>\n    </tr>\n    <tr>\n      <th>70078</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>38</td>\n    </tr>\n    <tr>\n      <th>70079</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>47</td>\n    </tr>\n  </tbody>\n</table>\n<p>70080 rows × 5 columns</p>\n</div>",
       "text/plain": "       Year  District.Code District.Name   Age  Number\n0      2017              1  Ciutat Vella   0-4     224\n1      2017              1  Ciutat Vella   0-4      50\n2      2017              1  Ciutat Vella   0-4      43\n3      2017              1  Ciutat Vella   0-4      95\n4      2017              2      Eixample   0-4     124\n...     ...            ...           ...   ...     ...\n70075  2013             10    Sant Martí  >=95      21\n70076  2013             10    Sant Martí  >=95      25\n70077  2013             10    Sant Martí  >=95      31\n70078  2013             10    Sant Martí  >=95      38\n70079  2013             10    Sant Martí  >=95      47\n\n[70080 rows x 5 columns]"
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>YEAR</th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>AGE</th>\n      <th>TOTAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>224</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>50</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>43</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>95</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2017</td>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>0-4</td>\n      <td>124</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>70075</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>21</td>\n    </tr>\n    <tr>\n      <th>70076</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>70077</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>31</td>\n    </tr>\n    <tr>\n      <th>70078</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>38</td>\n    </tr>\n    <tr>\n      <th>70079</th>\n      <td>2013</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>47</td>\n    </tr>\n  </tbody>\n</table>\n<p>70080 rows × 5 columns</p>\n</div>",
       "text/plain": "       YEAR  CODE_DISTRICT      DISTRICT   AGE  TOTAL\n0      2017              1  Ciutat Vella   0-4    224\n1      2017              1  Ciutat Vella   0-4     50\n2      2017              1  Ciutat Vella   0-4     43\n3      2017              1  Ciutat Vella   0-4     95\n4      2017              2      Eixample   0-4    124\n...     ...            ...           ...   ...    ...\n70075  2013             10    Sant Martí  >=95     21\n70076  2013             10    Sant Martí  >=95     25\n70077  2013             10    Sant Martí  >=95     31\n70078  2013             10    Sant Martí  >=95     38\n70079  2013             10    Sant Martí  >=95     47\n\n[70080 rows x 5 columns]"
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_population = df_population.replace({'5-9': '05-9'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>AGE</th>\n      <th>TOTAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>19940</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>10-14</td>\n      <td>16114</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>15-19</td>\n      <td>17185</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>20-24</td>\n      <td>30606</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>25-29</td>\n      <td>53741</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>75-79</td>\n      <td>44297</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>80-84</td>\n      <td>41676</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>85-89</td>\n      <td>26094</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>90-94</td>\n      <td>10269</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>2481</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 4 columns</p>\n</div>",
-      "text/plain": "     CODE_DISTRICT      DISTRICT    AGE  TOTAL\n0                1  Ciutat Vella    0-4  19940\n1                1  Ciutat Vella  10-14  16114\n2                1  Ciutat Vella  15-19  17185\n3                1  Ciutat Vella  20-24  30606\n4                1  Ciutat Vella  25-29  53741\n..             ...           ...    ...    ...\n195             10    Sant Martí  75-79  44297\n196             10    Sant Martí  80-84  41676\n197             10    Sant Martí  85-89  26094\n198             10    Sant Martí  90-94  10269\n199             10    Sant Martí   >=95   2481\n\n[200 rows x 4 columns]"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>AGE</th>\n      <th>TOTAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>0-4</td>\n      <td>19940</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>05-9</td>\n      <td>18362</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>10-14</td>\n      <td>16114</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>15-19</td>\n      <td>17185</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>20-24</td>\n      <td>30606</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>75-79</td>\n      <td>44297</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>80-84</td>\n      <td>41676</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>85-89</td>\n      <td>26094</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>90-94</td>\n      <td>10269</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>&gt;=95</td>\n      <td>2481</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 4 columns</p>\n</div>",
+      "text/plain": "     CODE_DISTRICT      DISTRICT    AGE  TOTAL\n0                1  Ciutat Vella    0-4  19940\n1                1  Ciutat Vella   05-9  18362\n2                1  Ciutat Vella  10-14  16114\n3                1  Ciutat Vella  15-19  17185\n4                1  Ciutat Vella  20-24  30606\n..             ...           ...    ...    ...\n195             10    Sant Martí  75-79  44297\n196             10    Sant Martí  80-84  41676\n197             10    Sant Martí  85-89  26094\n198             10    Sant Martí  90-94  10269\n199             10    Sant Martí   >=95   2481\n\n[200 rows x 4 columns]"
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,10 +198,10 @@
      "text": [
       "     CODE_DISTRICT      DISTRICT    AGE  TOTAL\n",
       "0                1  Ciutat Vella    0-4  19940\n",
-      "1                1  Ciutat Vella  10-14  16114\n",
-      "2                1  Ciutat Vella  15-19  17185\n",
-      "3                1  Ciutat Vella  20-24  30606\n",
-      "4                1  Ciutat Vella  25-29  53741\n",
+      "1                1  Ciutat Vella   05-9  18362\n",
+      "2                1  Ciutat Vella  10-14  16114\n",
+      "3                1  Ciutat Vella  15-19  17185\n",
+      "4                1  Ciutat Vella  20-24  30606\n",
       "..             ...           ...    ...    ...\n",
       "195             10    Sant Martí  75-79  44297\n",
       "196             10    Sant Martí  80-84  41676\n",
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
