--- a/data/code/animalscode.ipynb
+++ b/data/code/animalscode.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df_animals = pd.read_csv(\"../data/animals.csv\")\n",
+    "df_animals = pd.read_csv(\"../animals.csv\")\n",
     "\n",
     "print(df_animals)"
    ]
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_animals.to_csv(\"../data/animals_cleaned.csv\", index=False)"
+    "df_animals.to_csv(\"../animals_cleaned.csv\", index=False)"
    ]
   }
  ],
