--- a/data/code/parquescode.ipynb
+++ b/data/code/parquescode.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_parques = pd.read_csv(\"../data/parques.csv\")\n",
+    "df_parques = pd.read_csv(\"../parques.csv\")\n",
     "\n",
     "print(df_parques)"
    ]
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_parques.to_csv(\"../data/parques_cleaned.csv\", index=False)"
+    "df_parques.to_csv(\"../parques_cleaned.csv\", index=False)"
    ]
   }
  ],
