--- a/data/code/populationcode.ipynb
+++ b/data/code/populationcode.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_population = pd.read_csv(\"../data/population.csv\")\n",
+    "df_population = pd.read_csv(\"../population.csv\")\n",
     "\n",
     "print(df_population)"
    ]
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_population.to_csv(\"../data/population_cleaned.csv\", index=False)"
+    "df_population.to_csv(\"../population_cleaned.csv\", index=False)"
    ]
   }
  ],
