--- a/data/code/rentacode.ipynb
+++ b/data/code/rentacode.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "df_renta = pd.read_csv(\"../data/renta.csv\")\n",
+    "df_renta = pd.read_csv(\"../renta.csv\")\n",
     "\n",
     "print(df_renta)"
    ]
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_renta.to_csv(\"../data/renta_cleaned.csv\", index=False)"
+    "df_renta.to_csv(\"../renta_cleaned.csv\", index=False)"
    ]
   }
  ],
