--- a/data/code/wifipointcode.ipynb
+++ b/data/code/wifipointcode.ipynb
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "df_wifi = pd.read_csv(\"../data/wifi.csv\")\n",
+    "df_wifi = pd.read_csv(\"../wifi.csv\")\n",
     "\n",
     "print(df_wifi)"
    ]
@@ -362,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wifi.to_csv(\"../data/wifi_cleaned.csv\", index=False)"
+    "df_wifi.to_csv(\"../wifi_cleaned.csv\", index=False)"
    ]
   }
  ],
