--- a/data/code/areaperroscode.ipynb
+++ b/data/code/areaperroscode.ipynb
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "df_areaperros = pd.read_csv(\"../data/areaperro.csv\")\n",
+    "df_areaperros = pd.read_csv(\"../areaperro.csv\")\n",
     "print(df_areaperros)"
    ]
   },
@@ -370,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areaperros.to_csv(\"../data/areaperros_cleaned.csv\", index=False)"
+    "df_areaperros.to_csv(\"../areaperros_cleaned.csv\", index=False)"
    ]
   }
  ],
